--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,19 @@
   color: #61dafb;
 }
 
+.fullURLInput {
+	width: 90%;
+	padding: 10px;
+  margin: 10px;
+	font-size: calc(10px + 2vmin);
+}
+
+.fullURLSubmit {
+	width: 200px;
+	padding: 10px;
+	font-size: calc(10px + 2vmin);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
