--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,10 @@
 	font-size: calc(10px + 2vmin);
 }
 
+.Message-container {
+  max-width: 400px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
