run prettier over entire src/ codebase
ran command
`./node_modules/prettier/bin-prettier.js --write src/*`

--- a/client/src/ModalDialog.css
+++ b/client/src/ModalDialog.css
@@ -1,7 +1,5 @@
-
-
 .ModalDialogOverlay {
-  background-color: rgba(0,0,0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
   display: block;
   height: 100%;
   left: 0px;
