--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,10 +24,10 @@
 }
 
 .fullURLInput {
-	width: 90%;
-	padding: 10px;
+  width: 90%;
+  padding: 10px;
   margin: 10px;
-	font-size: calc(10px + 1vmin);
+  font-size: calc(10px + 1vmin);
 }
 
 .customHashInput {
@@ -37,9 +37,9 @@
 }
 
 .fullURLSubmit {
-	width: 200px;
-	padding: 10px;
-	font-size: calc(10px + 1vmin);
+  width: 200px;
+  padding: 10px;
+  font-size: calc(10px + 1vmin);
 }
 
 .Message-container {
@@ -52,7 +52,7 @@
 }
 
 .Message-container a:hover {
-  background-color: #6C6F78;
+  background-color: #6c6f78;
 }
 
 @keyframes App-logo-spin {
